src/test/deca/context/valid/provided/testMoinsUnaire.deca
{
    float x = -5.2;
}
